企業オファーのお気に入り企業のページを作成中

--- a/css/common/general.css
+++ b/css/common/general.css
@@ -1336,8 +1336,20 @@
 .comTabList {
 	margin: -2rem 0 6.1rem;
 }
+.comTabList-outer {
+	flex: 1;
+	width: 100%;
+}
 .comTabList.mb01 {
 	margin-bottom: 3.3rem;
+}
+.comTabList.col4 {
+	margin-bottom: 0;
+	display: flex;
+	flex-wrap: wrap;
+	column-gap: 2rem;
+	row-gap: 2rem;
+	margin: 0;
 }
 .comTabList.mb02 {
 	margin-bottom: 3.8rem;
@@ -1347,11 +1359,15 @@
 	width: calc(20% - 1.6rem);
 	box-sizing: border-box;
 }
+.comTabList .tab__name {
+	margin: 0;
+}
+
 .comTabList li:nth-child(5n) {
 	margin-right: 0;
 }
 .comTabList li a {
-	padding: 2.7rem 1rem 2.6rem;
+	padding: 3.5rem 1rem 3.5rem;
 	width: 100%;
 	height: 100%;
 	display: block;
@@ -1363,15 +1379,17 @@
 	box-shadow: 0 0 1.5rem rgba(0, 0, 0, 0.04);
 	box-sizing: border-box;
 	opacity: 1;
+
 }
 
 .comTabList .tab__name.is-active a {
 	color: #005792;
 	background-color: #FFF;
 }
+
 @media all and (min-width: 1025px) {
 	.comTabList.col4 li {
-		width: calc(25% - 1.5rem);
+		width: calc(50% - 1.5rem);
 	}
 	.comTabList.col4 li:nth-child(4n) {
 		margin-right: 0;
@@ -1398,8 +1416,7 @@
 		margin-right: 2rem;
 	}
 	.comTabList li a:hover {
-		color: #fff;
-		background-color: #005792;
+		background-color: #F2F6FA;
 	}
 }
 @media all and (min-width: 600px) and (max-width: 1024px) {
@@ -1412,6 +1429,15 @@
 	.comTabList.mb02 {
 		margin-bottom: 1.3rem;
 	}
+	.comTabList.col4 {
+		margin-bottom: 0;
+		display: flex;
+		flex-wrap:nowrap ;
+		justify-content: space-between;
+		align-items: center;
+		column-gap: 1rem;
+		margin:.1rem 0 0;
+	}
 	.comTabList li {
 		margin: 0.8rem 0.7rem 0 0;
 		width: calc(20% - 0.6rem);
@@ -1423,7 +1449,7 @@
 		margin-right: -0.2rem;
 	}
 	.comTabList.col4 li {
-		width: calc(25% - 0.6rem);
+		width: calc(100%);
 	}
 	.comTabList.col4 li:nth-child(4n) {
 		margin-right: 0;
@@ -1461,10 +1487,11 @@
 @media all and (max-width: 599px) {
 	.comTabList {
 		margin: -1rem 0 1.3rem;
-		justify-content: space-between;
 	}
 	.comTabList.mb01 {
 		margin-bottom: 1rem;
+		column-gap: 1rem;
+		row-gap: 1rem;
 	}
 	.comTabList.mb02 {
 		margin-bottom: 2.2rem;
@@ -1476,16 +1503,27 @@
 	}
 	.comTabList li {
 		margin: 1rem 0 0;
-		width: calc(33.33% - 0.5rem);
+		width: calc(50% - .5rem);
 	}
 	.comTabList li a {
-		padding: 0.8rem 0.2rem 0.9rem;
+		padding: 1.5rem 0.2rem;
 		display: flex;
 		justify-content: center;
 		align-items: center;
 		align-content: center;
-		font-size: .9rem;
+		font-size: 1.2rem;
 		border-radius: 0.5rem;
+	}
+	.comTabList.col4 {
+		margin-bottom: 0;
+		display: flex;
+		flex-wrap:wrap;
+		justify-content: space-between;
+		align-items: center;
+		column-gap: 1rem;
+	}
+	.comTabList-outer {
+		margin: 1rem 0;
 	}
 }
 /*------------------------------------------------------------
@@ -1984,6 +2022,9 @@
 	background: #fff;
 	box-shadow: 0 0.4rem 0.4rem rgba(0, 0, 0, 0.04);
 }
+.comListBox02.favorite {
+    padding: 6.1rem 3.8% 7.8rem;
+}
 .comListBox02 .listHead {
 	box-sizing: border-box;
 	position: relative;
@@ -2047,10 +2088,16 @@
 	align-content: center;
 	box-sizing: border-box;
 }
-.comListBox02 .listBody li .time {
+.comListBox02 .listBody li .time{
 	padding-left: 3%;
 	padding-right: 1rem;
 	width: 18.4%;
+	color: #A3A3A3;
+	font-weight: 500;
+}
+.comListBox02 .favorite-content .time {
+	padding-left: 3%;
+	padding-right: 1rem;
 	color: #A3A3A3;
 	font-weight: 500;
 }
@@ -2102,10 +2149,15 @@
 	z-index: 2;
 	font-size: 1.2rem;
 }
-.comListBox02 .listBody li .category .textBox {
+.comListBox02 .listBody li .category .textBox{
 	width: calc(100% - 5rem);
 	box-sizing: border-box;
 	padding-left: 1.3rem;
+	color: #202020;
+}
+.comListBox02 .favorite-body .textBox {
+	width: calc(100% - 5rem);
+	box-sizing: border-box;
 	color: #202020;
 }
 .comListBox02 .listBody li .category .textBox .ttl.phone{
@@ -2117,7 +2169,8 @@
 	white-space: nowrap;
 	font-size: 1.8rem;
 }
-.comListBox02 .listBody li .category .textBox .sml {
+.comListBox02 .listBody li .category .textBox .sml,
+.comListBox02 .favorite-body .textBox .sml {
 	margin-top: 0.2rem;
 	font-size: 1.5rem;
 	font-weight: normal;
@@ -2230,6 +2283,33 @@
 .comListBox02 .listBody li .hideBox li a {
 	padding: 0.8rem 1rem;
 	display: block;
+}
+
+#container .comListBox02 .favorite-wrapper {
+	display: grid;
+	grid-template-columns: repeat(5, 1fr);
+	column-gap: 4.5rem;
+	row-gap: 8rem;
+}
+#container .comListBox02 .favorite-box {
+	border-radius: 1.7rem;
+	box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.06);
+}
+.comListBox02 .favorite-body .textBox p {
+	font-size: 1.8rem;
+}
+#container .comListBox02 .favorite-img img {
+	overflow: hidden;
+	border-radius: 1.7rem 1.7rem 0 0;
+}
+#container .comListBox02 .favorite-body {
+	padding: 3.5rem 3rem 5rem;
+	border-radius: 0 0 1.7rem 1.7rem ;
+	margin-bottom: 1.5rem;
+}
+
+#container .comListBox02 .favorite-content .time {
+	text-align: right;
 }
 @media all and (min-width: 1025px) {
 	.comListBox02 .listBody li .category .pho a:hover img {
@@ -2825,17 +2905,25 @@
 }
 
 .comLinkBox01 {
-	margin-bottom: 2.9rem;
-	padding: 6.6rem 4% 6.6rem 5.8%;
+	padding: 4rem 4% 4rem 3.5%;
 	display: flex;
 	align-items: center;
 	column-gap: 3rem;
 	border-radius: 1.4rem;
 	background: #fff;
 	box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.04);
+	flex: 1;
+}
+
+.comLink-container {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	column-gap: 2rem;
+	margin-bottom: 3.3rem;
 }
 .comLinkBox01 .company-logo {
-	width: 13%;
+	width: 23%;
 }
 .comLinkBox01 .company-detail {
 	display: flex;
@@ -2866,19 +2954,22 @@
 	column-gap: 2rem;
 }
 .comLinkBox01 .btnList.multi img{
-	margin-right: .7rem;
+	width: 18%;
 }
 .comLinkBox01 .btnList li {
 	width: calc(50% - 0.6rem);
 }
 .comLinkBox01 .btnList li a {
-	padding: 1.6rem 2.5rem 1.7rem 3.4rem;
+	padding: 1rem 3rem 1rem 3.5rem;
 	display: block;
 	text-align: center;
 	color: #fff;
-	font-size: 1.8rem;
+	font-size: 1.7rem;
 	border-radius: 1.2rem;
 	background: #343434 url("../../img/common/icon38.png") no-repeat left 2.3rem center / 1.6rem auto;
+	display: flex;
+	align-items: center;
+	column-gap: 1rem;
 }
 /* グラデーションボタン */
 .comLinkBox01 .btnList  li .bgGradation {
@@ -2905,6 +2996,11 @@
 		justify-content: flex-start;
 		column-gap: 2rem;
 	}
+	.comLink-container {
+		display: flex;
+		flex-direction: column;
+		margin-bottom: 1.4rem;
+	}
 	.comLinkBox01 .leftBox {
 		max-width: inherit;
 		flex: 1;
@@ -2923,7 +3019,7 @@
 		width: calc(50% - 0.5rem);
 	}
 	.comLinkBox01 .btnList li a {
-		padding: 0.7rem 3rem 0.8rem 3rem;
+		padding: 0.7rem 2.5rem 0.8rem 2.5rem;
 		font-size: 1rem;
 		border-radius: 0.5rem;
 		background-size: 0.85rem auto;
@@ -2955,6 +3051,7 @@
 		column-gap: 1rem;
 		justify-content: space-between;
 	}
+
 	.comLinkBox01 .leftBox {
 		margin-bottom: 1.3rem;
 		width: auto;
@@ -2974,7 +3071,7 @@
 	.comLinkBox01 .btnList li a {
 		padding: 0.8rem 3rem 0.9rem 3rem;
 		font-size: 1.2rem;
-		border-radius: 0.5rem;
+		border-radius: 0.9rem;
 		background-size: 0.85rem auto;
 		background-position: left 1.4rem center;
 	}
@@ -2998,6 +3095,11 @@
 .comLinkBox01 .btnList.multi img {
 	width: 1.3rem;
 	vertical-align: middle;
+}
+.comLink-container {
+	display: flex;
+	flex-direction: column;
+	margin-bottom: 0;
 }
 }
 /*------------------------------------------------------------
@@ -3099,13 +3201,14 @@
 	padding-left: 3rem;
 	display: inline-block;
 	font-size: 1.4rem;
-	background: url("../../img/common/icon32.png")no-repeat top 0.3rem left 0.3rem;
+	background: url("/image/common/icon-fileDownload.svg")no-repeat top 0.3rem left 0.3rem;
 	background-size: 1.2rem;
 	box-sizing: border-box;
+	color: #005792;
 }
 @media all and (min-width: 1025px) {
 	.comLinkList01 li a:hover {
-		color: #555;
+		opacity: .7;
 	}
 }
 @media all and (min-width: 600px) and (max-width: 1024px) {
@@ -3184,28 +3287,26 @@
 		width: calc((100% / 3) - 0.8rem);
 	}
 	.comTextList02 li {
-		padding: 2.8rem 1rem;
-		width: calc((100% / 3) - 0.8rem);
-		text-align: center;
-		border-radius: 1rem;
+		padding: 3rem 4.4% 3.4rem;
+		width: calc((100% / 3) - 1.1rem);
+		position: relative;
+		background: #fff;
+		box-sizing: border-box;
+		border-radius: 1.4rem;
+		box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.04);
 	}
 	.comTextList02 li .text01 {
 		font-size: 1.4rem;
 	}
 	.comTextList02 li .text02 {
-		margin-top: 1rem;
-		display: flex;
-		justify-content: center;
-		align-items: center;
 		font-size: 1rem;
 	}
 	.comTextList02 li .text02 .icon {
-		margin: 0.2rem 0.3rem 0 0;
-		width: 1.2rem;
-		display: block;
-		position: static;
-		line-height: 0;
-		transform: translateY(0);
+	width: 2.5rem;
+	position: absolute;
+	right: 12%;
+	top: 50%;
+	transform: translateY(-50%);
 	}
 }
 @media all and (max-width: 599px) {
@@ -3220,10 +3321,8 @@
 		margin-bottom: 1.2rem;
 		padding: 2.5rem 2.6rem;
 		width: auto;
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
 		border-radius: 1rem;
+		position: relative;
 	}
 	.comTextList02 li:last-child {
 		margin-bottom: 0;
@@ -3233,16 +3332,14 @@
 	}
 	.comTextList02 li .text02 {
 		margin-top: 0;
-		padding-left: 1.7rem;
 		font-size: 1rem;
-		position: relative;
 	}
 	.comTextList02 li .text02 .icon {
-		padding-top: 0.2rem;
-		width: 1.2rem;
-		right: auto;
-		left: 0;
-		line-height: 0;
+		width: 2rem;
+		position: absolute;
+		right: 12%;
+		top: 50%;
+		transform: translateY(-50%);
 	}
 }
 /*------------------------------------------------------------
@@ -4433,7 +4530,7 @@
 ------------------------------------------------------------*/
 .comLinkBox02 {
 	margin-bottom: 5rem;
-	padding: 4.9rem 5.1% 5rem 5.8%;
+	padding: 4rem 5.1% 4rem 5.8%;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
@@ -4447,10 +4544,10 @@
 	align-items: center;
 	column-gap: 3rem;
 }
-/* .comLinkBox02 .rightBox {
-	display: flex;
-	align-items: center;
-} */
+.comLinkBox02 .rightBox {
+	/* display: flex;
+	align-items: center; */
+}
 .comLinkBox02 .leftBox .ttl {
 	font-size: 2.4rem;
 }
@@ -4495,6 +4592,7 @@
 	justify-content: flex-start;
 	align-items: center;
 }
+
 .comLinkBox02 .btnList.multi {
 	column-gap: 2rem;
 }
@@ -4508,11 +4606,11 @@
 	margin-left: 1.1rem;
 } */
 .comLinkBox02 .btnList li a {
-	padding: 1.5rem 2.6rem 1.8rem;
+	padding: 1rem 2rem;
 	display: block;
 	text-align: center;
 	color: #292929;
-	font-size: 1.8rem;
+	font-size: 1.7rem;
 	border-radius: 1.2rem;
 	background: #fff url("../../img/common/icon39.png") no-repeat left 9.4% center / 2rem auto;
 	border: solid 1.5px transparent;
@@ -4534,12 +4632,15 @@
 	align-items: center;
 	justify-content: center;
 	column-gap: 2rem;
-	padding: 1.5rem 3.5rem 1.8rem;
+	padding: 1rem 3rem;
 	border-color:#292929;
 }
 .comLinkBox02 .btnList li .approve {
 	background: #005792;
 	color: #FFF;
+}
+.comLinkBox02 .btnList li .approve:hover {
+	opacity: .8;
 }
 .comLinkBox02 .btnList li .hold {
 
@@ -4571,6 +4672,61 @@ display: none;
 .fixBox {
 	margin-bottom: 5rem;
 	position: relative;
+}
+
+.refuse-content {
+	background: #FFF;
+	border-radius: 1rem;
+	padding: 5rem;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+.refuse-modal {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	text-align: center;
+	background: rgba(0,0,0,50%);
+	display: none;
+	z-index: 10;
+}
+.refuse-modal.is-active {
+	display: block;
+}
+
+.refuse-container {
+	display: inline-block;
+	vertical-align: middle;
+	max-width: 600px;
+	position: relative;
+}
+.refuse-content p {
+	margin-top: 2rem;
+	margin-bottom: 3.8rem;
+    font-size: 1.8rem;
+    color: #202020;
+    line-height: 1.94;
+	text-align: center;
+}
+.comLinkBox02 .btnList.refuseBtn-box {
+	justify-content: center;
+}
+.comLinkBox02 .btnList li .confilm-btn {
+	width: 12rem;
+}
+
+.comLinkBox02 .btnList li .confilm-btn.cancel {
+	border-color: #292929;
+} 
+.comLinkBox02 .btnList li .confilm-btn.refuse:hover {
+	opacity: .8;
+}
+.comLinkBox02 .btnList li .confilm-btn.cancel:hover {
+	background: #E8EAEC;
 }
 @media all and (min-width: 1025px) {
 	.comLinkBox02 .btnList .btn01 a:hover {
@@ -4631,14 +4787,14 @@ display: none;
 		margin-left: 0;
 	}
 	.comLinkBox02 .btnList li a {
-		padding: 0.7rem 1.6rem 0.8rem 2rem;
+		padding: 0.6rem 1.6rem 0.6rem 2rem;
 		font-size: 1rem;
 		border-radius: 0.5rem;
 		background-size: 1rem auto;
 		background-position: left 0.8rem center;
 	}
 	.comLinkBox02 .btnList li .message {
-		padding: 0.7rem 1.6rem 0.8rem 2rem;
+		padding: 0.6rem 1.6rem 0.6rem 2rem;
 	}
 	.comLinkBox02 .btnList .btn02 a {
 		background-position: left 0.9rem center;
@@ -4717,7 +4873,7 @@ display: none;
 	}
 	.comLinkBox02 .btnList li a ,
 	.comLinkBox02 .btnList.multi li .message-resp {
-		padding: 0.9rem 1rem;
+		padding: 0.48rem 1rem;
 		font-size: 1.2rem;
 		border-radius: 0.5rem;
 		background-position: left 1.3rem center;
@@ -4726,7 +4882,7 @@ display: none;
 	.comLinkBox02 .btnList.multi li .message-resp {
 		display: flex;
 		column-gap: .5rem;
-		border-radius: 1rem;
+		border-radius: .7rem;
 	}
 	.comLinkBox02 .btnList .btn02 a {
 		background-position: left 1.3rem center;
@@ -4741,12 +4897,12 @@ display: none;
 		transform: none;
 	}
 	.comLinkBox02.boxStyle01 {
-		padding: 3.3rem 2.5rem 3.8rem;
+		padding: 2.2rem 2.5rem 2.2rem;
 		border-radius: 0.8rem;
 		box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.04);
 	}
 	.comLinkBox02.boxStyle01 .leftBox {
-		margin: 0 0.5rem 2.2rem;
+		margin: 0 0.5rem 0;
 	}
 	.comLinkBox02.boxStyle01 .leftBox .ttl {
 		margin-bottom: 1.5rem;
@@ -4773,9 +4929,9 @@ display: none;
 		margin-left: 0.8rem;
 	} */
 	.comLinkBox02.boxStyle01 .btnList li a {
-		padding: .8rem 1.4rem .8rem ;
+		padding: .48rem 1.4rem;
 		font-size: 1.1rem;
-		border-radius: .8rem;
+		border-radius: .6rem;
 		background-size: 1.3rem auto;
 	}
 	.comLinkBox02.boxStyle01 .btnList .btn01 a {
@@ -4792,6 +4948,27 @@ display: none;
 	}
 	.comLinkBox02 .rightBox {
 		justify-content: center;
+	}
+	.refuse-content {
+		padding: 3rem;
+	}
+	.refuse-content {
+		max-width: 350px;
+	}
+	.comLinkBox02 .btnList li .confilm-btn {
+		width: 7rem;
+	}
+	.refuse-content p {
+		margin-top: 2rem;
+		margin-bottom: 3.8rem;
+		font-size: 1.4rem;
+		color: #202020;
+		line-height: 1.94;
+		text-align: center;
+	}
+	.comLinkBox02.boxStyle01 .btnList li .confilm-btn {
+		padding: 0.7rem 1.4rem 0.8rem;
+		border-radius: .7rem;
 	}
 }
 /*------------------------------------------------------------
@@ -5425,6 +5602,7 @@ display: none;
 	background: #fff;
 	box-sizing: border-box;
 	box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.04);
+	z-index: 5;
 }
 .comContsBox .rightBox .comTable01 th {
 	padding-bottom: 2.5rem;
@@ -10228,3 +10406,78 @@ display: none;
 	}
 }
 
+/*------------------------------------------------------------
+	辞退確認のモーダルウィンドウ
+------------------------------------------------------------*/
+  
+  /* モーダルと背景の指定 */
+  .modal{
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	text-align: center;
+	background: rgba(0,0,0,50%);
+	padding: 40px 20px;
+	overflow: auto;
+	opacity: 0;
+	visibility: hidden;
+	transition: .3s;
+	box-sizing: border-box;
+  }
+  
+  /* モーダルの擬似要素の指定 */
+  .modal:before{
+	content: "";
+	display: inline-block;
+	vertical-align: middle;
+	height: 100%;
+	margin-left: -0.2em;
+  }
+  
+  /* クラスが追加された時の指定 */
+  .modal.is-active{
+	opacity: 1;
+	visibility: visible;
+  }
+  
+  /* モーダル内側の指定 */
+  .modal-container{
+	position: relative;
+	display: inline-block;
+	vertical-align: middle;
+	max-width: 600px;
+	width: 90%;
+  }
+  
+  /* モーダルを閉じるボタンの指定 */
+  .modal-close{
+	position: absolute;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	top: -20px;
+	right: -20px;
+	width: 40px;
+	height: 40px;
+	color: #fff;
+	background: #000;
+	border-radius: 50%;
+	cursor: pointer;
+  }
+  
+  /* モーダルのコンテンツ部分の指定 */
+  .modal-content{
+	background: #fff;
+	text-align: left;
+	line-height: 1.8;
+	padding: 20px;
+  }
+  
+  /* モーダルのコンテンツ部分のテキストの指定 */
+  .modal-content p{
+	margin: 1em 0;
+  }
+  
+  
