企業オファーページで必要な部分が完成　実機確認での調整まだ

--- a/css/common/layout.css
+++ b/css/common/layout.css
@@ -349,7 +349,7 @@ a[href^="tel:"] {
 	display: block;
   }
   #gHeader .modal-content.notice .notice-box {
-	max-height: auto;
+	max-height: 450px;
 	overflow: scroll;
   }
   /* モーダルのコンテンツ部分のテキストの指定 */
