--- a/css/common/general.css
+++ b/css/common/general.css
@@ -1336,6 +1336,9 @@
 .comTabList {
 	margin: -2rem 0 6.1rem;
 }
+.comTabList.categoryTab {
+	justify-content: space-between;
+}
 .comTabList-outer {
 	flex: 1;
 	width: 100%;
@@ -1487,6 +1490,10 @@
 @media all and (max-width: 599px) {
 	.comTabList {
 		margin: -1rem 0 1.3rem;
+	}
+	.comTabList.categoryTab {
+		row-gap: 1rem;
+		justify-content: space-between;
 	}
 	.comTabList.mb01 {
 		margin-bottom: 1rem;
@@ -2141,6 +2148,9 @@
 	z-index: 2;
 	font-size: 1.4rem;
 }
+.favoriteIcon  {
+	width: 3.3rem;
+}
 .comListBox02 .listBody li .category .favoriteIcon {
 	width: 3.3rem;
 	position: absolute;
@@ -2156,7 +2166,7 @@
 	color: #202020;
 }
 .comListBox02 .favorite-body .textBox {
-	width: calc(100% - 5rem);
+	width: calc(100%);
 	box-sizing: border-box;
 	color: #202020;
 }
@@ -2293,19 +2303,46 @@
 }
 #container .comListBox02 .favorite-box {
 	border-radius: 1.7rem;
-	box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.06);
+	box-shadow: 0 0 1.5rem rgba(0, 0, 0, 0.06);
 }
 .comListBox02 .favorite-body .textBox p {
 	font-size: 1.8rem;
 }
+#container .comListBox02 .favorite-img {
+	height: 15rem;
+	position: relative;
+	/* box-shadow: 0 0 1.5rem rgba(0, 0, 0, 0.06);
+	border-radius: 1.7rem; */
+}
 #container .comListBox02 .favorite-img img {
 	overflow: hidden;
 	border-radius: 1.7rem 1.7rem 0 0;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	height: 11rem;
+	width: 80%;
+	object-fit: contain;
 }
 #container .comListBox02 .favorite-body {
-	padding: 3.5rem 3rem 5rem;
+	padding: 0 3rem 4.5rem;
 	border-radius: 0 0 1.7rem 1.7rem ;
 	margin-bottom: 1.5rem;
+}
+#container .comListBox02 .favorite-wrap {
+display: flex;
+justify-content: space-between;
+align-items: center;
+}
+
+#container .comListBox02 .favorite-body::before {
+	content: '';
+	display: block;
+	background: #E5E5E5;
+	width: 100%;
+	height: 1px;
+	margin-bottom: 2rem;
 }
 
 #container .comListBox02 .favorite-content .time {
@@ -2462,6 +2499,9 @@
 		   right: 0%;
 		   z-index: 2;
 	   }
+	   .favoriteIcon {
+		width: 2rem;
+	   }
 	   .comListBox02 .listBody li .category .favoriteIcon {
 		width: 2rem;
 		position: absolute;
@@ -2475,6 +2515,35 @@
 		text-overflow: ellipsis;
 		white-space: nowrap;
 		font-size: 1.25rem;
+	}
+
+	/* お気に入りされた企業一覧  タブレット*/
+	#container .comListBox02 .favorite-wrapper {
+		display: grid;
+		grid-template-columns: repeat(3, 1fr);
+		column-gap: 2rem;
+		row-gap: 3rem;
+	}
+	#container .comListBox02 .favorite-body {
+		padding: 0 2rem 3.5rem;
+		border-radius: 0 0 1.7rem 1.7rem ;
+		margin-bottom: 1.5rem;
+	}
+	#container .comListBox02 .favorite-img {
+		height: 11rem;
+		position: relative;
+	}
+	#container .comListBox02 .favorite-img img {
+		width: 80%;
+		height: 9rem;
+		object-fit: contain;
+	}
+	.comListBox02 .favorite-body .textBox p {
+		font-size: 1.25rem;
+	}
+	.comListBox02 .favorite-body .textBox .sml {
+		font-size: 1rem;
+		margin-top: 0.1rem;
 	}
 }
 @media all and (max-width: 599px) {
@@ -2588,6 +2657,9 @@
 		z-index: 2;
 		font-size: .8rem;
 	}
+	.favoriteIcon {
+		width: 2rem;
+	}
 	.comListBox02 .listBody li .category .favoriteIcon {
 		width: 2rem;
 		position: absolute;
@@ -2601,6 +2673,39 @@
 		font-size: 1.05rem;
 		margin-top: .7rem;
 	  }
+
+	  	/* お気に入りされた企業一覧  タブレット*/
+	#container .comListBox02 .favorite-wrapper {
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+		column-gap: 1.3rem;
+		row-gap: 3rem;
+	}
+	#container .comListBox02 .favorite-body {
+		padding: 0 2rem 2rem;
+		border-radius: 0 0 1.7rem 1.7rem ;
+		margin-bottom: 1.5rem;
+	}
+	#container .comListBox02 .favorite-img {
+		height: 9rem;
+		position: relative;
+	}
+	#container .comListBox02 .favorite-img img {
+		height: 7rem;
+		width: 80%;
+		object-fit: contain;
+	}
+	.comListBox02 .favorite-body .textBox p {
+		font-size: 1.4rem;
+	}
+	.comListBox02 .favorite-body .textBox .sml {
+		margin-top: 0.1rem;
+		font-size: 1.1rem;
+
+	}
+	.comListBox02.favorite {
+		padding: 3.1rem 5.5% 3.8rem;
+	}
 }
 /*------------------------------------------------------------
 	comListUl01
@@ -2712,6 +2817,7 @@
 		margin-top: 0.4rem;
 		font-size: 0.8rem;
 	}
+
 }
 /*------------------------------------------------------------
 	comPageNavi
@@ -4618,6 +4724,30 @@
 .comLinkBox02 .btnList li .stateBtn {
 	width: 8rem;
 }
+/* 会いたいボタン */
+.comLinkBox02 .btnList li .stateBtn.meet {
+	background: #005792;
+	color: #FFF;
+	width: auto;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	column-gap: 1rem;
+}
+.comLinkBox02 .btnList li .stateBtn.meet img{
+	width: 3rem;
+}
+
+/* 会いたいを送信した表示 */
+.comLinkBox02 .btnList li .stateBtn.send {
+	background: #FFF;
+	border-color: #005792;
+	color: #005792;
+}
+.comLinkBox02 .btnList li .send:hover {
+    background: #DDEBF5;
+}
+
 .comLinkBox02 .btnList li .fill:hover {
 	opacity: .7;
 }
@@ -4813,6 +4943,13 @@ display: none;
 	.comLinkBox02 .btnList li .stateBtn {
 		width: 5rem;
 	}
+			/* 会いたいボタン */
+		.comLinkBox02 .btnList li .stateBtn.meet {
+			column-gap: 1rem;
+		}
+		.comLinkBox02 .btnList li .stateBtn.meet img{
+			width: 2rem;
+		}
 }
 @media all and (max-width: 599px) {
 	.comLinkBox02 {
@@ -4826,7 +4963,7 @@ display: none;
 		height: auto;
 	}
 	.comLinkBox02 .leftBox {
-		margin: 0 0.3rem 1.8rem;
+		margin: 0 0.3rem 0;
 		width: auto;
 		max-width: inherit;
 	}
@@ -4904,7 +5041,7 @@ display: none;
 	.comLinkBox02.boxStyle01 .leftBox {
 		margin: 0 0.5rem 0;
 	}
-	.comLinkBox02.boxStyle01 .leftBox .ttl {
+	.comLinkBox02 .leftBox .ttl {
 		margin-bottom: 1.5rem;
 		font-size: 2rem;
 	}
@@ -4970,6 +5107,14 @@ display: none;
 		padding: 0.7rem 1.4rem 0.8rem;
 		border-radius: .7rem;
 	}
+
+		/* 会いたいボタン */
+.comLinkBox02 .btnList li .stateBtn.meet {
+	column-gap: 1rem;
+}
+.comLinkBox02 .btnList li .stateBtn.meet img{
+	width: 2rem;
+}
 }
 /*------------------------------------------------------------
 	comProfile
@@ -10411,7 +10556,7 @@ display: none;
 ------------------------------------------------------------*/
   
   /* モーダルと背景の指定 */
-  .modal{
+  .refuse-modal-content {
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -10428,7 +10573,7 @@ display: none;
   }
   
   /* モーダルの擬似要素の指定 */
-  .modal:before{
+  .refuse-modal-content:before{
 	content: "";
 	display: inline-block;
 	vertical-align: middle;
@@ -10437,13 +10582,13 @@ display: none;
   }
   
   /* クラスが追加された時の指定 */
-  .modal.is-active{
+  .refuse-modal-content.is-active{
 	opacity: 1;
 	visibility: visible;
   }
   
   /* モーダル内側の指定 */
-  .modal-container{
+  .refuse-modal-content .modal-container{
 	position: relative;
 	display: inline-block;
 	vertical-align: middle;
@@ -10452,7 +10597,7 @@ display: none;
   }
   
   /* モーダルを閉じるボタンの指定 */
-  .modal-close{
+  .refuse-modal-content .modal-close{
 	position: absolute;
 	display: flex;
 	align-items: center;
@@ -10468,7 +10613,7 @@ display: none;
   }
   
   /* モーダルのコンテンツ部分の指定 */
-  .modal-content{
+  .refuse-modal-content .modal-content{
 	background: #fff;
 	text-align: left;
 	line-height: 1.8;
@@ -10476,7 +10621,7 @@ display: none;
   }
   
   /* モーダルのコンテンツ部分のテキストの指定 */
-  .modal-content p{
+ .refuse-modal-content .modal-content p{
 	margin: 1em 0;
   }
   
