--- a/css/common/general.css
+++ b/css/common/general.css
@@ -300,7 +300,7 @@
 		text-align: center;
 	}
 	.pageTitle img {
-		width: 2rem;
+		width: 2.5rem;
 	   } 
 	.pageTitle01 {
 		margin-bottom: 1.5rem;
@@ -316,7 +316,7 @@
 	}
 	.pageTitle h2 {
 		margin: 0;
-		font-size: 1.4rem;
+		font-size: 1.8rem;
 	}
 	.pageTitle .subTtl {
 		font-size: 1rem;
@@ -468,7 +468,7 @@
 .headLine03 {
 	margin-bottom: 2.3rem;
 	color: #202020;
-	font-size: 2.4rem;
+	font-size: 2.1rem;
 }
 @media all and (min-width: 600px) and (max-width: 1024px) {
 	.headLine03 {
@@ -2123,7 +2123,7 @@
 	column-gap: 1.3rem;
 }
 .comListBox02 .listBody li .category .pho {
-	width: 20rem;
+	width: 16rem;
 	position: relative;
 }
 
@@ -2149,10 +2149,10 @@
 	font-size: 1.4rem;
 }
 .favoriteIcon  {
-	width: 3.3rem;
+	width: 3.8rem;
 }
 .comListBox02 .listBody li .category .favoriteIcon {
-	width: 3.3rem;
+	width: 3.8rem;
 	position: absolute;
 	bottom: -5%;
 	right: -10%;
@@ -2675,6 +2675,8 @@ align-items: center;
 		position: relative;
 	}
 	.comListBox02 .listBody li .category .stat-messagePhone .offer-listImg img {
+				/* ごちゃごちゃしているので表示を一旦削除 */
+		display: none;
 		width: 2.2rem;
 	}
 	.comListBox02 .listBody li .category .stat-messagePhone .offer-listImg.noread::before {
@@ -2688,6 +2690,8 @@ align-items: center;
 		top: 3%;
 		right: -3%;
 		z-index: 2;
+		/* ごちゃごちゃしているので表示を一旦削除 */
+		display: none;
 	}
  p {
 		margin-right: .8rem;
@@ -3409,14 +3413,14 @@ align-items: center;
 	.comInfoBox .imgBox .textBox p {
 		margin-bottom: 2.5rem;
 		font-size: 1.2rem;
-		line-height: 2.16;
+		line-height: 1.7;
 	}
 }
 /*------------------------------------------------------------
 	comLinkList01
 ------------------------------------------------------------*/
 .comLinkList01 li {
-	margin-bottom: 1.5rem;
+	margin-bottom: 1.1rem;
 }
 .comLinkList01 li:last-child {
 	margin-bottom: 0;
@@ -3489,7 +3493,7 @@ align-items: center;
 }
 .comTextList02 li .text01 {
 	color: #202020;
-	font-size: 2.6rem;
+	font-size: 2.2rem;
 }
 .comTextList02 li .text02 {
 	margin-top: 0.7rem;
@@ -4773,7 +4777,7 @@ align-items: center;
 	align-items: center; */
 }
 .comLinkBox02 .leftBox .ttl {
-	font-size: 2.4rem;
+	font-size: 2.1rem;
 }
 .comLinkBox02 .leftBox .txtList {
 	margin-bottom: 0.3rem;
@@ -5174,7 +5178,7 @@ display: none;
 	}
 	.comLinkBox02 .leftBox .ttl {
 		margin-bottom: 1.5rem;
-		font-size: 2rem;
+		font-size: 1.6rem;
 	}
 	.comLinkBox02.boxStyle01 .leftBox .txtList dt {
 		min-width: 7.4rem;
