--- a/css/common/layout.css
+++ b/css/common/layout.css
@@ -1650,9 +1650,9 @@ display: inline;
 	#container .pagination .next a
 	{
 		display: inline-block;
-		height: 1.1rem;
-		width: 1.1rem;
-		line-height: 1.1rem;
+		height: .7rem;
+		width: .7rem;
+		line-height: .7rem;
 		border-radius: 1.1rem;
 		text-align: center;
 		font-size: 1.3rem;
