--- a/css/common/general.css
+++ b/css/common/general.css
@@ -2202,6 +2202,11 @@
 	align-items: center;
 	justify-content: center;
 }
+.comListBox02 .listBody li .ttl.favorite {
+justify-content: flex-start;
+padding-left: 15.4rem;
+
+}
 .comListBox02 .listBody li .favorite-txt {
 	color: #005792;
 }
@@ -2243,6 +2248,10 @@
 		text-overflow: clip;  
 		overflow-wrap: break-word;
 }
+
+.comListBox02 .listBody li .ttl .txt-favorite.favorite-page {
+	max-width: 45rem;
+}
 .comListBox02 .listBody li .status {
 	box-sizing: border-box;
 	padding-right: 7.5%;
@@ -2250,10 +2259,9 @@
 	display: flex;
 	align-items: center;
 }
-.comListBox02 .listBody li .status.status.state-favo {
-	opacity: 0;
+.comListBox02 .listBody li .status.favorite {
+	display: none;
 }
-
 .comListBox02 .listBody li .statusPho {
 display: none;
 }
@@ -2470,6 +2478,7 @@ align-items: center;
 	.comListBox02 .listBody li .category .textBox .sml {
 		margin-top: 0.2rem;
 		font-size: 1rem;
+		line-height: 1;
 	}
 	.comListBox02 .listBody li .ttl {
 		padding-left: 0;
@@ -2479,6 +2488,7 @@ align-items: center;
 
 	.comListBox02 .listBody li .ttl.favorite {
 		width: 45.5%;
+		padding-left: 5rem;
 	}
 	.comListBox02 .listBody li .ttl::before {
 		width: 2.4rem;
@@ -2640,7 +2650,7 @@ align-items: center;
 		font-size: 1rem;
 		font-weight: 500;
 		position: absolute;
-		top: 9%;
+		top: 8%;
 		right: 5%;
 	}
 	.comListBox02 .listBody li .time::before {
@@ -2653,12 +2663,12 @@ align-items: center;
 		content: "";
 	}
 	.comListBox02 .listBody li .category {
-		padding: 0.3rem 0rem 0 0;
+		padding: 0.3rem 1rem 0 0rem;
 		width: 100%;
 		font-size: 1rem;
 		display: flex;
 		align-items: center;
-		justify-content:start;
+		justify-content:space-between;
 	}
 	.comListBox02 .listBody li .category .pho {
 		width: 7rem;
@@ -2679,17 +2689,26 @@ align-items: center;
 		row-gap: 1rem;
 	
 	}
+	.comListBox02 .listBody li .category .stat-messagePhone.favorite {
+		opacity: 0;
+	
+	}
+	.comListBox02 .listBody li .category .textBox.favorite {
+		width: 50%;
+		white-space: nowrap;
+	}
+
 	.comListBox02 .listBody li .category .textBox {
-		padding-left: 0;
+		padding-left: 1rem;
 		display: flex;
 		flex-direction: column;
-		width: 40%;
-	}
-	.comListBox02 .listBody li .category .textBox p {
-		margin-right: 0;
+		width: 50%;
 	}
 	.comListBox02 .listBody li .category .textBox p  {
+		margin-right: 0;
+		margin-top: .5rem;
 		font-size: 1.2rem;
+		line-height: 1.3;
 	}
 	.comListBox02 .listBody li .category .textBox .sml  {
 		font-size: 1rem;
@@ -2700,7 +2719,6 @@ align-items: center;
 	.comListBox02 .listBody li .category .stat-messagePhone .offer-listImg img {
 				/* ごちゃごちゃしているので表示を一旦削除 */
 		display: none;
-		width: 2.2rem;
 	}
 	.comListBox02 .listBody li .category .stat-messagePhone .offer-listImg.noread::before {
 		content: '';
@@ -2732,6 +2750,9 @@ align-items: center;
 		line-height: 1.5;
 		box-sizing: border-box;
 	}
+	.comListBox02 .listBody li .ttl.favorite {
+		padding-left: 0;
+	}
 	.comListBox02 .listBody li .ttl::before {
 		display: none;
 	}
@@ -2755,6 +2776,7 @@ align-items: center;
 		right: 3.8rem;
 		top: 3.4rem
 	}
+	
 	.comListBox02 .listBody li .status span {
 		display: none;
 		padding: 0.3rem 0.6rem 0.4rem;
@@ -2762,12 +2784,29 @@ align-items: center;
 		font-size: 1rem;
 		border-radius: 0.5rem;
 	}
-	.comListBox02 .listBody li .status-wrapper span {
+	.comListBox02 .listBody li .statusPho span {
+		display: block;
+	}
+
+	.comListBox02 .listBody li .status-wrapper span,
+	.comListBox02 .listBody li .status span {
 		padding: 0.3rem 0.6rem 0.4rem;
 		width: 4.7rem;
 		font-size: 1rem;
 		border-radius: 0.5rem;
+		border-color: #005792;
+		background-color: #005792;
 	}
+	.comListBox02 .listBody li .status-wrapper .status02 span {
+		border-color: #A3A3A3;
+		background-color: #A3A3A3;
+	}
+	.comListBox02 .listBody li .status-wrapper .status03 span{
+	color: #005792;
+    border-color: #005792;
+    background-color: #fff;
+	}
+
 	.comListBox02 .listBody li .clickBtn a {
 		width: 3.8rem;
 		background-size: 0.2rem auto;
@@ -2808,7 +2847,7 @@ align-items: center;
 		font-size: 1.2rem;
 	}
 	.comListBox02 .listBody li .category .textBox .ttl.phone{
-		display: block;
+		display: none;
 		font-size: 1.05rem;
 		margin-top: .7rem;
 	  }
